fix: temporary fix to make theme selector not look weird when challenges overflow

--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -3,6 +3,5 @@ h2 {
 }
 
 .themeSelector {
-    position: absolute;
-    bottom: 1rem;
+    
 }
